# NDKotlin

./: README.md  build.gradle  commons.gradle  settings.gradle
Commons/: build.gradle
Commons/src/androidTest/java/com/cam/commons/: ExampleInstrumentedTest.kt
Commons/src/main/: AndroidManifest.xml
Commons/src/main/cpp/: CMakeLists.txt
Commons/src/main/cpp/image_process/: CMakeLists.txt  ImageProcess.cpp
Commons/src/main/cpp/security/: CMakeLists.txt  Security.cpp
Commons/src/main/java/com/cam/commons/: Commons.kt  LogUtils.kt
Commons/src/main/java/com/cam/image_process/: ImageParser.kt  ImageProcess.kt
Commons/src/main/java/com/cam/security/: SecurityUtils.kt
Commons/src/test/java/com/cam/commons/: ExampleUnitTest.kt
app/: build.gradle
app/src/androidTest/java/com/cam/ndkotlin/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/commons/: Commons.cpp  Commons.h  android_log.h
app/src/main/cpp/image_process/: CMakeLists.txt  ImageProcess.cpp
app/src/main/cpp/security/: CMakeLists.txt  Security.cpp  Temp.cpp
app/src/main/java/com/cam/ndkotlin/: ImageParser.kt  ImageProcess.kt  MainActivity.kt
app/src/main/java/com/cam/ndkotlin/security/: SecurityUtils.kt  Temps.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/cam/ndkotlin/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
